[gd_scene load_steps=4 format=2]

[ext_resource path="res://discharge/discharge.png" type="Texture" id=1]
[ext_resource path="res://discharge/Discharge.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.01

[node name="Discharge" type="Area2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TimeToLive" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Discharge_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
